--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
     "react-responsive": "^8.2.0",
+    "react-scripts": "^4.0.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
@@ -73,9 +74,10 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
